<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/main_activity_horizontal_margin"
    android:paddingRight="@dimen/main_activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clarinetmaster.finalexamcpsu2016.LoginActivity">

    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/login_label"
        android:textAlignment="center"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_userName"
        android:ems="10"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:text="@string/btn_login_submit" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_create_account" />
</RelativeLayout>
