<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/main_activity_horizontal_margin"
    android:paddingRight="@dimen/main_activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clarinetmaster.finalexamcpsu2016.RegisterActivity">

    <TextView
        android:id="@+id/register_text_label"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/register_label"
        android:textAlignment="center"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text_label"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_editText_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_editText_name"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_editText_userName"
        android:ems="10"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_editText_password"
        android:text="@string/btn_register_submit" />


</RelativeLayout>
